--- a/foundations/02-class-id-selectors/solution/solution.css
+++ b/foundations/02-class-id-selectors/solution/solution.css
@@ -7,10 +7,10 @@
   font-size: 24px;
 }
 
-#two {
+/* # {
   color: #0000ff;
   font-size: 36px;
-}
+} */
 
 #four {
   background-color: hsl(120, 100%, 75%);
