--- a/foundations/02-class-id-selectors ***/solution/solution.css
+++ b/foundations/02-class-id-selectors ***/solution/solution.css
@@ -3,14 +3,15 @@
   font-family: Verdana, DejaVu Sans, sans-serif;
 }
 
+#two{
+ color: #0000ff;
+ font-size: 36px;
+} 
+
 .oddly-cool {
   font-size: 24px;
 }
 
-/* # {
-  color: #0000ff;
-  font-size: 36px;
-} */
 
 #four {
   background-color: hsl(120, 100%, 75%);
