--- a/foundations/02-class-id-selectors ***/style.css
+++ b/foundations/02-class-id-selectors ***/style.css
@@ -8,7 +8,8 @@
   color: blue;
   font-size: 36px;
 }
-
+ 
+/* you dont have to do extra stuff to use classes in the same line */
 .cooler{
   font-size: 24px;
 }
